	- StopService() will post WM_QUIT message to the ServiceMain() thread to shut down the service thread.
	- Calling into StopService() will auto change the state to STOPPING/STOPPED so you do not need to 
	  explicitly do so (calling State() or a callback returning STOPPING/STOPPED).

20070102 rothd
	- Cleaned up a bit.
	- Added WM_QUIT message to the ServiceMain function. Now the Perl StopService() will 
	  post this message to shut down the service thread.
	- Fixed bug where messages were posted to wrong thread.

20080321 rothd
	- Added support for SERVICE_CONTROL_PRESHUTDOWN.
	- Callbacks can now return a state value. This is the functional equivilent of calling 
	  Win32::Daemon::State( $NewState ) before returning:
		//	sub EventCallback
		//	{
		//	  my( $Event, $Context ) = @_;
		//		# Process the event
		//		Win32::Daemon::State( $NewState );		
		//	  return;
		//	}
		//	=================== SAME AS ====================
		//	sub EventCallback
		//	{
		//	  my( $Event, $Context ) = @_;
		//		# Process the event
		//	  return( $NewState );
		//	}
		
	- Callback timer works correctly!
	- CALLBACK_RUNNING has been depreciated and replaced with CALLBACK_TIMER. It is only called
	  when the timer (set by CallbackTimer()) has expired. Use this as a heartbeat. You only need
	  to set it once either with CallbackTimer() or passing in the timer value when calling into 
	  StartService().
	  Set the callback using "timer" as the callback name. Using "running" will also work but it
	  is mapped to "timer". If you specify both, only "timer" will be registered.
	- Created TestFramework.pm to help with testing services.
	- Pruned out unnecessary stuff from Daemon.pm file.

20091028 Olivier Mengue
        - Disabled END {} in non-main threads to fix bug RT#50020

20101014 Jan Dubois
	- minimal POD cleanup
	- avoid CPAN indexing of the packages under test/
	- QueryLastMessage() had been renamed to LastControlMessage().
	  Rename it back to preserve backwards compatibility.