@@ -124,3 +124,9 @@ HISTORY:
 	- avoid CPAN indexing of the packages under test/
 	- QueryLastMessage() had been renamed to LastControlMessage().
 	  Rename it back to preserve backwards compatibility.
+
+20110117 Jan Dubois
+	- make sure DllMain() has "C" linkage when compiled with MinGW
+	  (Haiko Strotbek). [rt#64575]
+	- change StartService() and GetServiceHandle() to return proper
+	  64-bit value on Win64 (Haiko Strotbek). [rt#64577]
